--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -8,7 +8,7 @@
     .services-container .header-container {
         text-align: left;
         padding: 50px 0px 0px 0px;
-        margin: 0px 0px 40px 55px;
+        margin: 0px 0px 40px 25px;
     }
 
     .services-container .header-text {
